--- a/src/com/bridgelabz/files/appointment.json
+++ b/src/com/bridgelabz/files/appointment.json
@@ -1,16 +1,1 @@
-[
-	{
-		"doctorName": "tony",
-		"doctorId": 1,
-		"patientName": "bholi",
-		"patientId": 1,
-		"timeStamp": "2018-06-11 19:32:35"
-	},
-	{
-		"doctorName": "tony",
-		"doctorId": 1,
-		"patientName": "bhola",
-		"patientId": 2,
-		"timeStamp": "2018-06-11 19:33:04"
-	}
-]
+[{"doctorName":"tony","doctorId":1,"patientName":"bholi","patientId":1,"timeStamp":"2018-06-11 19:32:35"},{"doctorName":"tony","doctorId":1,"patientName":"bhola","patientId":2,"timeStamp":"2018-06-11 19:33:04"},{"doctorName":"tomy","doctorId":3,"patientName":"pappu","patientId":3,"timeStamp":"2018-06-12 10:55:13"},{"doctorName":"tomy","doctorId":3,"patientName":"bholi","patientId":1,"timeStamp":"2018-06-12 11:07:05"}]
