--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="/home/bridgelabz/Downloads/springjars/core/jmxtools-1.2.1.jar"/>
 	<classpathentry kind="lib" path="/home/bridgelabz/Downloads/springjars/core/com.springsource.org.apache.log4j-1.2.15.jar"/>
 	<classpathentry kind="lib" path="/home/bridgelabz/Downloads/springjars/core/com.springsource.org.apache.commons.logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/home/bridgelabz/Downloads/springjars/aop/com.springsource.net.sf.cglib-2.2.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
